responsive CSS fixed when on mobile view, accordion toggle added to the article, many other styles adjustments

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
 * ***REMOVED***
   box-sizing: border-box;
+
   margin: 0;
   padding: 0;
   outline: 0;
@@ -34,7 +35,7 @@ body ***REMOVED***
 .form-input ***REMOVED***
   width: 100%;
   height: 30px;
-  margin: 7px 0;
+  margin: 10px 0;
   padding: 0 10px;
   font-size: 12px;
 }
@@ -61,7 +62,7 @@ body ***REMOVED***
 
 .header .content ***REMOVED***
   display: flex;
-  width: 100%;
+
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -71,20 +72,21 @@ body ***REMOVED***
   color: #ffffff;
   font-size: 20px;
   font-weight: 400;
-  align-self: center;
+  align-self: flex-start;
 }
 
 .header .content h1 ***REMOVED***
   font-size: 40px;
   height: 48px;
   color: #ffffff;
-  align-self: center;
+  align-self: flex-start;
 }
 
 .header .content p ***REMOVED***
   font-size: 14px;
   margin-top: 24px;
   color: #ffffff;
+  align-self: flex-start;
 }
 
 .header .content span ***REMOVED***
@@ -106,7 +108,7 @@ body ***REMOVED***
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 15px;
+  margin: 10px;
 }
 
 /* end Header styles */
@@ -118,12 +120,14 @@ body ***REMOVED***
 }
 .subscribe-newsletter .content article ***REMOVED***
   color: #888888;
-  width: 60%;
+  width: 100%;
+  max-width: 520px;
   padding: 0 19px;
   float: left;
   display: block;
 }
-.subscribe-newsletter .content article h1 ***REMOVED***
+
+.subscribe-newsletter .content .accordion-title article h1 ***REMOVED***
   text-align: left;
   font-size: 20px;
   letter-spacing: 0px;
@@ -135,8 +139,9 @@ body ***REMOVED***
 }
 
 .subscribe-newsletter .content form ***REMOVED***
-  width: 40%;
+  width: 100%;
   float: left;
+  max-width: 340px;
   padding: 0 20px;
 }
 .subscribe-newsletter .content form label ***REMOVED***
@@ -166,6 +171,43 @@ body ***REMOVED***
 
 .subscribe-newsletter .content form button ***REMOVED***
   max-width: 340px;
+}
+.subscribe-newsletter .content article .accordion-title .accordion-button ***REMOVED***
+  display: none;
+}
+
+@media (max-width: 800px) ***REMOVED***
+  .content ***REMOVED***
+    width: 90%;
+  }
+  .subscribe-newsletter .content ***REMOVED***
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .subscribe-newsletter .content article ***REMOVED***
+    max-width: 100%;
+    margin-bottom: 30px;
+  }
+  .subscribe-newsletter .content article .accordion-title ***REMOVED***
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  .subscribe-newsletter .content article .accordion-title .accordion-button ***REMOVED***
+    width: 18px;
+    height: 9px;
+    display: contents;
+    color: #888888;
+    cursor: pointer;
+  }
+
+  .subscribe-newsletter .content form ***REMOVED***
+    max-width: 100%;
+  }
+  .subscribe-newsletter .content form button ***REMOVED***
+    max-width: 100%;
+  }
 }
 
 /* end Subscribe styles */
@@ -225,14 +267,37 @@ body ***REMOVED***
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
 }
-
 .share-newsletter .content .newsletter-form .input ***REMOVED***
   width: 100%;
   margin: 0 2rem;
   max-width: 34rem;
 }
+
+@media (min-width: 650px) ***REMOVED***
+  .share-newsletter .content .newsletter-form .email-inputs ***REMOVED***
+    flex-direction: row;
+  }
+
+  .header .content h3 ***REMOVED***
+    align-self: center;
+  }
+
+  .header .content h1 ***REMOVED***
+    align-self: center;
+  }
+
+  .header .content p ***REMOVED***
+    align-self: center;
+  }
+
+  .subscribe-newsletter .content article p .panel ***REMOVED***
+    display: none;
+    overflow: hidden;
+  }
+}
+
 .share-newsletter .content .newsletter-form .input label ***REMOVED***
   font-size: 12px;
   color: #888888;
@@ -245,6 +310,10 @@ body ***REMOVED***
 }
 
 /* Products  styles */
+
+.products-selection .content .input .product-list-btn ***REMOVED***
+  margin-top: 63px;
+}
 
 .products-selection .content .products ***REMOVED***
   display: grid;
@@ -278,8 +347,9 @@ body ***REMOVED***
 .products-selection .content .products .product .product-image ***REMOVED***
   width: 50%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
+
 .products-selection .content .products .product .product-block ***REMOVED***
   width: 100%;
   height: 100%;
@@ -322,6 +392,15 @@ body ***REMOVED***
   max-width: 200px;
   height: 30px;
   margin-top: 10px;
+}
+
+@media (min-width: 700px) ***REMOVED***
+  .products-selection .content .products .product .product-image ***REMOVED***
+    width: 70%;
+  }
+  .products-selection .content .input .product-list-btn ***REMOVED***
+    margin-top: 53px;
+  }
 }
 
 /* footer  styles */
